# wasm-testing

./: .env  .gitignore  .prettierrc  CI_SETUP.md  Cargo.toml  README.md  TESTING.md  WALLET_DERIVATION_CHANGES.md  codegen-contract.js  codegen-schema.sh  justfile  package.json  tailwind.config.js  tailwind.theme.js  tsconfig.app.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/: settings.json
.github/workflows/: buildPublish.yaml  dapp-init.yaml  integration-test.yml  test-contracts.yml
.infra/: cloudflare-pages.tf
.storybook/: preview-body.html  preview.tsx
contract/: Cargo.toml  justfile
contract/.devcontainer/: devcontainer.json
contract/scripts/: check_artifacts_size.sh  get_artifacts_versions.sh
contract/src/: contract.rs  lib.rs  msg.rs  queries.rs
contracts/: .env  Cargo.toml  README.md  justfile
contracts/.devcontainer/: devcontainer.json
contracts/contract-1/: Cargo.toml
contracts/contract-1/src/: contract.rs
contracts/contracts/dapp-template/: Cargo.toml
contracts/contracts/dapp-template/src/: commands.rs  contract.rs  msg.rs
contracts/dapp-template/: Cargo.toml
contracts/dapp-template/schema/: dapp-template.json
contracts/dapp-template/src/: commands.rs  contract.rs  msg.rs
contracts/dapp-template/tests/: integration.rs
contracts/deployer/: README.md  deploy.ts  global.d.ts  migrate.ts  package.json
contracts/deployer/config/dukong/: dapp_template.ts
contracts/deployer/config/mainnet/: dapp_template.ts
contracts/deployer/deployment/dukong/: dapp_template_2025_04_09_10_05_58.json  dapp_template_2025_04_10_03_45_37.json  dapp_template_2025_04_10_03_46_42.json  dapp_template_migration_2025_04_10_03_52_02.json
contracts/scripts/: build_schemas.sh  get_artifacts_versions.sh  instantiate_contract.sh  set_txflag.sh  store_artifact.sh
contracts/xtask/: Cargo.toml
contracts/xtask/src/: main.rs
integration_tests/: conftest.py  network.py  pyproject.toml  shell.nix  test_basic.py  utils.py
scripts/: set_txflag.sh  test.sh  test_ci.sh  test_wallet_derivation.sh
src/: main.tsx
src/components/User/: UserContainer.tsx
src/components/common/: AmountInput.stories.tsx  AmountInput.tsx  AppIcon.tsx  AwaitingTransactionDialog.stories.tsx  DialogIconHeader.stories.tsx  DialogIconHeader.tsx  HighlightedTabList.tsx  NotConnected.stories.tsx  NotConnected.tsx  TxHashLink.tsx
src/hooks/: useAllBalances.tsx  useAwaitingTransactionDialog.tsx  useCalculateGasFee.tsx  useChainName.tsx
src/routes/: __root.tsx  index.tsx
src/shadcn/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  skeleton.tsx  tabs.tsx  toast.tsx
src/utils/: createTypedMessage.tsx  shortenAddress.tsx
webapp/: .gitignore  .prettierignore  codegen-contract.js  codegen-schema.sh  components.json  eslint.config.js  index.html  package.json  vite.config.ts
webapp/.devcontainer/: devcontainer.json
webapp/.storybook/: main.ts  preview.tsx
webapp/src/: index.css  main.tsx
webapp/src/__generated__/contracts/: DappTemplate.client.ts  DappTemplate.message-builder.ts  DappTemplate.message-composer.ts  DappTemplate.provider.ts  DappTemplate.react-query.ts  DappTemplate.types.ts  contractContextProviders.ts  contracts-context.tsx  index.ts
webapp/src/components/: MainContainer.tsx
webapp/src/components/User/: UserContainer.tsx
webapp/src/components/common/: AwaitingTransactionDialog.tsx  ConnectWalletButton.stories.tsx  ConnectWalletButton.tsx  HighlightedTabList.stories.tsx  LoadingCard.tsx  ModeToggle.tsx  Navbar.tsx  NetworkSelector.stories.tsx  NetworkSelector.tsx  NotConnected.tsx  PriceString.stories.tsx  (+1 more)
webapp/src/hooks/: useAllBalances.tsx  useAppConfig.tsx  useCounter.tsx
webapp/src/routes/: __root.tsx  index.tsx
webapp/src/utils/: formatTokenBalance.tsx
xtask/src/: main.rs
(+14 files in other folders)
