# see https://github.com/matklad/cargo-xtask for more details about this package.
# it is a helper to run rust binary tasks on the repository.
# for instance, we can use it to generate all schemas for each contract.

[package]
authors.workspace    = true
description          = "Generate cosmwasm schemas for workspace members"
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "xtask"
publish.workspace    = true
repository.workspace = true
version              = "1.0.0"

[dependencies]
cosmwasm-schema.workspace = true
dapp-template.workspace   = true
serde.workspace           = true
serde_json.workspace      = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
